--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
   <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
-  <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" />
+  <link rel="stylesheet" href="../assets/css/membersv15.css" type="text/css" />
 </head>
 
 <body>
@@ -62,13 +62,27 @@
             </div>
         </div>
     </nav>
+    <div class = "header">
+        <h1> MEMBERS OF ICB </h1>
+        <p> Meet our ICB family!</p>
+    </div>
+
+    <div class = "exec">
+        <h2> Executive Board </h2>
+
+    </div>
+
+    <div class = "members">
+        <h2> OUR TEAM </h2>
+
+    </div>
 
     <!-- Footer -->
-    <!-- <footer>
-        <div class="container d-flex justify-content-center align-items-center">
-            <p>Invention Corps 2020</p>
-        </div>
-    </footer> -->
+    <footer>
+        Made with ♥ by the
+        <span> <a href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+    </footer>
+
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
