Member circle structures

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -67,14 +67,184 @@
         <p> Meet our ICB family!</p>
     </div>
 
-    <div class = "exec">
+    <div class = "container">
         <h2> Executive Board </h2>
-
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <!-- <img alt="bongi" src="../assets/img//members/bongi.png"/> -->
     </div>
 
-    <div class = "members">
+    <div class = "container">
         <h2> OUR TEAM </h2>
-
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Bongi Fleischer</p>
+                <p> Computer Science</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+            <div class = "col">
+                <span class="dot"></span>
+                <p class = "name"> Full Name</p>
+                <p> Role or Major</p>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
