--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -62,187 +62,193 @@
             </div>
         </div>
     </nav>
+    <!-- Header -->
     <div class = "header">
         <h1> MEMBERS OF ICB </h1>
         <p> Meet our ICB family!</p>
     </div>
 
-    <div class = "container">
-        <h2> Executive Board </h2>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
+    <!-- Exec Board -->
+    <div class = "exec">
+        <div class = "container">
+            <h2> Executive Board </h2>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"> <img alt="bongi" src="../assets/img//members/bongi.png" class = "member"/> </span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
         </div>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-        </div>
-        <!-- <img alt="bongi" src="../assets/img//members/bongi.png"/> -->
     </div>
 
-    <div class = "container">
-        <h2> OUR TEAM </h2>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
+    <!-- Team -->
+    <div class = "team">
+        <div class = "container">
+            <h2> Our Team </h2>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
-        </div>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-        </div>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-        </div>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-        </div>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-        </div>
-        <div class = "row">
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Bongi Fleischer</p>
-                <p> Computer Science</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
-            </div>
-            <div class = "col">
-                <span class="dot"></span>
-                <p class = "name"> Full Name</p>
-                <p> Role or Major</p>
+            <div class = "row">
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Bongi Fleischer</p>
+                    <p> Computer Science</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
+                <div class = "col">
+                    <span class="dot"></span>
+                    <p class = "name"> Full Name</p>
+                    <p> Role or Major</p>
+                </div>
             </div>
         </div>
     </div>
