Member photos bad quality

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -453,7 +453,7 @@
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
-                        <img alt="shaantham" src="../assets/img//members/shaantham.png" class = "member"/>
+                        <img alt="shaantam" src="../assets/img//members/shaantam.png" class = "member"/>
                         </div>
                     </div>
                     <p class = "name">Shantaam Chawla</p>
