added proj thumbnails, background, tags

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -80,107 +80,115 @@
     <!-- Custom Scripts -->
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
+    <div style="background-image: url('../assets/img/projs-background.svg');">
     <div class="container">
-        <h2 id ="projects-header" class="jumptarget" style="padding-bottom: 3%;">Our Projects</h2>
+        <h2 id ="projects-header" class="jumptarget" style="padding-bottom: 3%;">PROJECTS GALLERY</h2>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
         <div class="container">
             <div class="row">
               <div class="col-6 col-sm-4">
                 <div style="padding-bottom: 10%;">
                 <a href="projects/alemany-farms.html">
-                    <img src="../assets/img/projthumbnails/alemany farm 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%" alt="Alemany Farm">
-                    <div class="proj-title">alemany farm</div>
+                    <img src="../assets/img/projthumbnails/newalemany.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%" alt="Alemany Farm">
                 </a>
+                <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
+                <mark style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
+                <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+
+
                 </div>
               </div>
               <div class="col-6 col-sm-4">
                 <div style="padding-bottom: 10%;">
                 <a href="projects/communitycafe.html">
-                    <img src="../assets/img/projthumbnails/community cafe 3x2.png" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                    <div class="proj-title">community cafe</div>
+                    <img src="../assets/img/projthumbnails/newnetic.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                 </a>
                 </div>
               </div>
               <div class="col-6 col-sm-4">
                 <div style="padding-bottom: 10%;">
                 <a href="projects/netic.html">
-                    <img src="../assets/img/projthumbnails/neomotion 3x2.png" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                    <div class="proj-title">netic health</div>
+                    <img src="../assets/img/projthumbnails/newcc.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                 </a>
                 </div>
               </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/berkeley-student-food-collective.html">
-                        <img src="../assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        <img src="../assets/img/projthumbnails/moffmake.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
                         alt="Berkeley Student Food Collective">
-                        <div class="proj-title">berkeley student food collective</div>
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">moffitt makerspace</div>
+                        <img src="../assets/img/projthumbnails/newgs.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">groupsource</div>
+                        <img src="../assets/img/projthumbnails/newbsfc.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/berkeley-student-food-collective.html">
-                        <img src="../assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        <img src="../assets/img/projthumbnails/thrive.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
                         alt="Berkeley Student Food Collective">
-                        <div class="proj-title">berkeley student food collective</div>
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">moffitt makerspace</div>
+                        <img src="../assets/img/projthumbnails/visualize.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">groupsource</div>
+                        <img src="../assets/img/projthumbnails/hofmann.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/berkeley-student-food-collective.html">
-                        <img src="../assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        <img src="../assets/img/projthumbnails/fub.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
                         alt="Berkeley Student Food Collective">
-                        <div class="proj-title">berkeley student food collective</div>
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">moffitt makerspace</div>
+                        <img src="../assets/img/projthumbnails/concha.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                        <div class="proj-title">groupsource</div>
+                        <img src="../assets/img/projthumbnails/kinetic.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/groupsource.html">
+                        <img src="../assets/img/projthumbnails/d4j.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/groupsource.html">
+                        <img src="../assets/img/projthumbnails/catheter.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                     </a>
                     </div>
                 </div>
