--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -26,7 +26,8 @@
   <!-- Bootstrap Styling -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
-    <link rel="stylesheet" href="about.css" type="text/css"/>
+  <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
+  <link rel="stylesheet" href="../assets/css/about.css" type="text/css" />
 </head>
 
 <body>
@@ -46,16 +47,13 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNav">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link about" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link members" href="members.html">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="members.html">Members</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="project.html">Project</a>
+                        <a class="nav-link projects" href="projects.html">Projects</a>
                     </li>
                 </ul>
             </div>
