--- a/v1.5/project.html
+++ b/v1.5/project.html
@@ -47,16 +47,13 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNav">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link about" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link members" href="members.html">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="members.html">Members</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="project.html">Project</a>
+                        <a class="nav-link projects" href="projects.html">Projects</a>
                     </li>
                 </ul>
             </div>
