commit before merge

--- a/indexv15.html
+++ b/indexv15.html
@@ -46,16 +46,13 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNav">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a class="nav-link" href="v1.5/about.html">About</a>
+                        <a class="nav-link about" href="v1.5/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="v1.5/projects.html">Projects</a>
+                        <a class="nav-link members" href="v1.5/members.html">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="v1.5/members.html">Members</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="v1.5/project.html">Project</a>
+                        <a class="nav-link projects" href="v1.5/projects.html">Projects</a>
                     </li>
                 </ul>
             </div>
