--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -61,8 +61,8 @@
     </nav>
     <!-- Header -->
     <div class = "header">
-        <h1> MEMBERS OF ICB </h1>
-        <p> Meet our ICB family!</p>
+        <h1> OUR INVENTORS </h1>
+        <p> Meet the heart behind our designs!</p>
     </div>
 
     <!-- Exec Board -->
@@ -74,7 +74,7 @@
                     <div class="dot blue">
                         <div class = "quote">I like pie</div>
                         <div class = "img-container">
-                            <img alt="bongi" src="../assets/img//members/bongi.png" class = "member"/>
+                            <img alt="bongi" src="../assets/img/members/bongi.png" class = "member"/>
                         </div>
                     </div>
                     <p class = "name"> Bongi Fleischer</p>
@@ -84,7 +84,7 @@
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
-                            <img alt="carlos" src="../assets/img//members/carlos.png" class = "member"/>
+                            <img alt="carlos" src="../assets/img/members/carlos.png" class = "member"/>
                         </div>
                     </div>
                     <p class = "name"> Carlos Oriol Lopez-Tenorio</p>
@@ -285,8 +285,8 @@
                         <img alt="jeffrey" src="../assets/img//members/jeffrey.png" class = "member"/>
                         </div>
                     </div>
-                    <p class = "name black"> Jeffrey Shen</p>
-                    <p class = "role black"> Architecture </p>
+                    <p class = "name"> Jeffrey Shen</p>
+                    <p class = "role"> Architecture </p>
                 </div>
                 <div class = "col">
                     <div class="dot green">
@@ -295,8 +295,8 @@
                         <img alt="joe" src="../assets/img//members/joe.png" class = "member"/>
                         </div>
                     </div>
-                    <p class = "name black"> Joe Li</p>
-                    <p class = "role black"> Mechanical Engineering</p>
+                    <p class = "name"> Joe Li</p>
+                    <p class = "role"> Mechanical Engineering</p>
                 </div>
                 <div class = "col">
                     <div class="dot yellow">
