--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -84,7 +84,7 @@
         </div>
         <div class="column2">
             <figure>
-                <img src="aboutpic1.png" alt="aboutpic1" id="aboutpic1" />
+                <img src="../assets/img/about/aboutpic1.png" alt="aboutpic1" id="aboutpic1" />
                 <figcaption>Members Jasmine and Jeffrey facilitating our Spring 2020 recruitment workshop. </figcaption>
             </figure>
         </div>
@@ -95,7 +95,7 @@
     <div class="row">
          <div class="column1">
             <figure>
-                <img src="aboutpic2.png" alt="aboutpic2" id="aboutpic2" />
+                <img src="../assets/img/about/aboutpic2.png" alt="aboutpic2" id="aboutpic2" />
                 <figcaption>Member Abhinav brainstorming during our Spring 2020 recruitment workshop. </figcaption>
             </figure>
         </div>
@@ -135,7 +135,7 @@
         </div>
         <div class="column2">
             <figure>
-                <img src="aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
+                <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
                 <figcaption>Senior members Iris, Tori, Zulaika, and Manooshree at our Spring 2020 recruitment workshop. </figcaption>
             </figure>
         </div>
